--- a/app/src/main/res/layout/activity_group_profile.xml
+++ b/app/src/main/res/layout/activity_group_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F2F4f7"
-    tools:context="com.irmsimapp.Activity.GroupProfileActivity">
+    tools:context="com.dcdroid.chatapp.Activity.GroupProfileActivity">
     <include
         android:id="@+id/header"
         android:layout_width="match_parent"
